--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,13 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets/images",
+                "output": "images"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets/icons",
+                "output": "icons"
               }
             ],
             "styles": [
